support jdk11-ea --add-modules java.se